--- a/course_index.yaml
+++ b/course_index.yaml
@@ -1,7 +1,7 @@
 title: Ubuntu fundamentals
 description: Learn the basic ubuntu commands
 labs:
-- title: ubuntu
+- title: Ubuntu
   description: learn the basic ubuntu commands
   directory: /ubuntu
   number_of_tasks: 1
